Created endpoint Delete
